Fix/portfolio (#21)
* fix (PortfolioWorItem, scrollbar) fix icons hover and active effects, new style of scrollbar

* refactor (SphereAmination) format code

* fix (PortfolioBlock) animation position

* fix (PortfolioBlock, ExpertiseBlock, SphereAnimation, WorkList) add white sphere animation, format code

* fix (SphereAnimation) remove console log

* feature (HomeBlock, Header) add contact popup to header and main block, format code

--- a/src/components/home-block/HomeBlock.module.css
+++ b/src/components/home-block/HomeBlock.module.css
@@ -1,12 +1,19 @@
+.wrapper {
+    display: flex;
+    justify-content: center;
+    height: 450px;
+}
+
 .title {
-    margin-top: 150px;
+    position: absolute;
+    top: 200px;
 }
 
 .btn {
     display: flex;
     align-items: center;
+    position: absolute;
     justify-content: center;
     width: 608px;
-    padding: 0 112px;
-    margin: 100px auto 0;
+    top: 400px;
 }
