--- a/src/components/portfolio/portfolio-work-item/PortfolioWorkItem.module.css
+++ b/src/components/portfolio/portfolio-work-item/PortfolioWorkItem.module.css
@@ -1,21 +1,25 @@
 .wrapper {
-    margin: 10px 40px 10px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px 20px 10px 0;
+    cursor: pointer;
 }
 
 .icon {
-    background: url('../../../images/icons/portfolio/portfolio-work.svg') no-repeat center;
-    width: 60px;
-    height: 80px;
+    background: url('../../../images/icons/portfolio/project-normal.png') no-repeat center;
+    width: 100px;
+    height: 100px;
 }
 
 .icon:hover {
-    background: url('../../../images/icons/portfolio/portfolio-work-hover.svg') no-repeat center;
+    background: url('../../../images/icons/portfolio/project-hover.png') no-repeat center;
 }
 
 .icon-active {
-    background: url('../../../images/icons/portfolio/portfolio-work-active.svg') no-repeat center;
-    width: 60px;
-    height: 80px;
+    background: url('../../../images/icons/portfolio/project-active.png') no-repeat center;
+    width: 100px;
+    height: 100px;
 }
 
 .title {
